Add support for skippable failures on field extraction